# ociapp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
example/: README.md  runtime_demo.py
example/echo-app/: pyproject.toml
examples/: runtime_demo.py
examples/echo-app/: pyproject.toml
examples/echo-app/src/echo_app/: main.py
plans/: 01.md  02.md  03.md  04.md  05.md
src/ociapp_runtime/: __init__.py  client.py  engine.py  errors.py  runner.py  runtime.py
tests/: test_client.py  test_engine.py  test_runner.py  test_runtime.py
