[project]
name = "ociapp-workspace"
version = "0.1.0"
description = "Workspace for OCIApp packages"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ociapp",
    "ociapp-build",
    "ociapp-runtime",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "msgpack>=1.1.1",
    "pydantic>=2.11.9",
    "prek>=0.3.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/ociapp/tests/python",
    "packages/ociapp-build/tests/python",
    "packages/ociapp-runtime/tests/python",
]
addopts = "-ra -vv --import-mode=importlib --cov=ociapp --cov=ociapp_build --cov=ociapp_runtime --cov-branch --cov-report=term-missing"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = [
    "packages/ociapp/src",
    "packages/ociapp-build/src",
    "packages/ociapp-runtime/src",
]

[[tool.mypy.overrides]]
module = ["msgpack"]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["B", "I", "ASYNC", "TC", "SIM", "PL"]
extend-ignore = ["UP037"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TC", "F811", "PLR2004"]

[tool.ruff.lint.flake8-type-checking]
strict = true
quote-annotations = true

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true
preview = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
ociapp = { workspace = true }
ociapp-build = { workspace = true }
ociapp-runtime = { workspace = true }
